popupCharacters instead of popupKeyboard (e&u)
android:popupCharacters instead of popupKeyboard
( not sure with e popup, remove greek and currency character )

--- a/app/src/main/res/xml/qwerty.xml
+++ b/app/src/main/res/xml/qwerty.xml
@@ -22,11 +22,11 @@
     <Row>
         <Key android:codes="113" android:popupCharacters="1" android:keyEdgeFlags="left"/>
         <Key android:codes="119" android:popupCharacters="2ŵʷω"/>
-        <Key android:codes="101" android:popupKeyboard="@xml/popup_qwerty_e"/>
+        <Key android:codes="101" android:popupCharacters="3éèēêëę"/>
         <Key android:codes="114" android:popupCharacters="4řŕṛρ"/>
         <Key android:codes="116" android:popupCharacters="5þṭțť\u0163ŧτ"/>
         <Key android:codes="121" android:popupCharacters="6ýÿŷỹψ"/>
-        <Key android:codes="117" android:popupKeyboard="@xml/popup_qwerty_u"/>
+        <Key android:codes="117" android:popupCharacters="7ùúǔûüŭűūυ"/>
         <Key android:codes="105" android:popupCharacters="8ıìíîïīĩǐįι*"/>
         <Key android:codes="111" android:popupCharacters="9òóôǒōõöőøơœo"/>
         <Key android:codes="112" android:popupCharacters="0π" android:keyEdgeFlags="right"/>
