--- a/app/src/main/res/xml/qwerty.xml
+++ b/app/src/main/res/xml/qwerty.xml
@@ -20,16 +20,16 @@
     -->
     <!-- original -->
     <Row>
-        <Key android:codes="113" android:popupCharacters="1" android:keyEdgeFlags="left"/>
-        <Key android:codes="119" android:popupCharacters="2ŵʷω"/>
-        <Key android:codes="101" android:popupCharacters="3ɛéèēêëęĕėěẽǝ"/>
-        <Key android:codes="114" android:popupCharacters="4řŕṛρ"/>
-        <Key android:codes="116" android:popupCharacters="5þṭțť\u0163ŧτ"/>
-        <Key android:codes="121" android:popupCharacters="6ýÿŷỹψ"/>
-        <Key android:codes="117" android:popupCharacters="7ùúǔûüŭűūũůųưυ"/>
-        <Key android:codes="105" android:popupCharacters="8ıìíîïīĩǐįι*"/>
-        <Key android:codes="111" android:popupCharacters="9òóôǒōõöőøơœo"/>
-        <Key android:codes="112" android:popupCharacters="0π" android:keyEdgeFlags="right"/>
+        <Key android:codes="113" android:keyLabel="q" android:popupCharacters="1" android:keyEdgeFlags="left"/>
+        <Key android:codes="119" android:keyLabel="w" android:popupCharacters="2ŵʷω"/>
+        <Key android:codes="101" android:keyLabel="e" android:popupCharacters="3ɛéèēêëęĕėěẽǝ"/>
+        <Key android:codes="114" android:keyLabel="r" android:popupCharacters="4řŕṛρ"/>
+        <Key android:codes="116" android:keyLabel="t" android:popupCharacters="5þṭțť\u0163ŧτ"/>
+        <Key android:codes="121" android:keyLabel="y" android:popupCharacters="6ýÿŷỹψ"/>
+        <Key android:codes="117" android:keyLabel="u" android:popupCharacters="7ùúǔûüŭűūũůųưυ"/>
+        <Key android:codes="105" android:keyLabel="i" android:popupCharacters="8ıìíîïīĩǐįι*"/>
+        <Key android:codes="111" android:keyLabel="o" android:popupCharacters="9òóôǒōõöőøơœo"/>
+        <Key android:codes="112" android:keyLabel="p" android:popupCharacters="0π" android:keyEdgeFlags="right"/>
     </Row>
 
     <Row>
@@ -50,9 +50,9 @@
              android:isModifier="true" android:isSticky="true" android:keyEdgeFlags="left"/>
         <Key android:codes="122" android:keyLabel="z" android:popupCharacters="żžźẓʒǯζ"/>
         <Key android:codes="120" android:keyLabel="x"  android:popupCharacters="ξχ"/>
-        <Key android:codes="99" android:keyLabel="c" android:popupCharacters="çċćĉčγ"/>
+        <Key android:codes="99"  android:keyLabel="c" android:popupCharacters="çċćĉčγ"/>
         <Key android:codes="118" android:keyLabel="v"/>
-        <Key android:codes="98" android:keyLabel="b" android:popupCharacters="β"/>
+        <Key android:codes="98"  android:keyLabel="b" android:popupCharacters="β"/>
         <Key android:codes="110" android:keyLabel="n" android:popupCharacters="ŋñňńν"/>
         <Key android:codes="109" android:keyLabel="m"  android:popupCharacters="μ"/>
         <Key android:keyWidth="15%p" android:codes="-5" android:keyEdgeFlags="right" android:isRepeatable="true"/>
